# libassert

./: .gitignore  CMakeLists.txt
include/: assert.hpp
include/config/: assert.hpp.in
